--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "expo": "^51.0.6",
+    "expo-image-picker": "~15.0.5",
     "expo-splash-screen": "~0.27.4",
+    "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,8 +27,7 @@
     "react-native-screens": "~3.31.1",
     "react-native-web": "^0.19.11",
     "react-redux": "^9.1.2",
-    "yup": "^1.4.0",
-    "expo-image-picker": "~15.0.5"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
