--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/metro-runtime": "~3.1.3",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
-    "expo": "^51.0.6",
-    "expo-image-picker": "~15.0.5",
-    "expo-splash-screen": "~0.27.4",
-    "expo-sqlite": "~14.0.3",
-    "expo-status-bar": "~1.12.1",
+    "expo": "~50.0.17",
+    "expo-image-picker": "~14.7.1",
+    "expo-splash-screen": "^0.26.5",
+    "expo-sqlite": "~13.4.0",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "~3.31.1",
+    "react-native": "^0.73.6",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "^0.19.11",
     "react-redux": "^9.1.2",
     "yup": "^1.4.0"
