--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/icons/tequila.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#f0c08b"
       }
     },
