--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "splash": {
       "image": "./src/icons/tequila.png",
       "resizeMode": "contain",
-      "backgroundColor": "#f0c08b"
+      "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -19,8 +19,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#f0c08b"
+        "foregroundImage": "./src/icons/tequila.png",
+        "backgroundColor": "#ffffff"
       }
     },
     "web": {
